# SlicerDeepSpinalSegmentor

./: CMakeLists.txt  README.md  SlicerDeepSpinalSegmentor.s4ext
DeepSpinalSegmentor/: CMakeLists.txt  DeepSpinalSegmentor.py
